1.2.1.dev0
 * Skip before/after backup hooks when only doing --prune, --check, --list, and/or --info.
 * #71: Support for XDG_CONFIG_HOME environment variable for specifying alternate user ~/.config/
   path.
 * #38, #76: Upgrade ruamel.yaml compatibility version range and fix support for Python 3.7.
 * #77: Skip non-"*.yaml" config filenames in /etc/borgmatic.d/ so as not to parse backup files,
   editor swap files, etc.

1.2.0
 * #61: Support for Borg --list option via borgmatic command-line to list all archives.
 * #61: Support for Borg --info option via borgmatic command-line to display summary information.
 * #62: Update README to mention other ways of installing borgmatic.
 * Support for Borg --prefix option for consistency checks via "prefix" option in borgmatic's
   consistency configuration.
 * Add introductory screencast link to documentation.
 * #59: Ignore "check_last" and consistency "prefix" when "archives" not in consistency checks.
 * #60: Add "Persistent" flag to systemd timer example.
 * #63: Support for Borg --nobsdflags option to skip recording bsdflags (e.g. NODUMP, IMMUTABLE) in
   archive.
 * #69: Support for Borg prune --umask option using value of existing "umask" option in borgmatic's
   storage configuration.
 * Update tox.ini to only assume Python 3.x instead of Python 3.4 specifically.
 * Add ~/.config/borgmatic/config.yaml to default configuration path probing.
 * Document how to develop on and contribute to borgmatic.

1.1.15
 * Support for Borg BORG_PASSCOMMAND environment variable to read a password from an external file.
 * Fix for Borg create error when using borgmatic's --dry-run and --verbosity options together.
   Work-around for behavior introduced in Borg 1.1.3: https://github.com/borgbackup/borg/issues/3298
 * #55: Fix for missing tags/releases on Gitea and GitHub project hosting.
 * #56: Support for Borg --lock-wait option for the maximum wait for a repository/cache lock.